--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,11 @@ layout: default
   </div>
 
   <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
+    Posted {{ page.date | date: "%B %e, %Y" }}
+  </div>
+
+  <div class="all-posts">
+    <a href="{{ site.baseurl }}/"><i class="fa fa-reply"></i> All Posts</a>
   </div>
 
   {% include disqus.html %}
