change target of site to _parent

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
           </div>
 
           <nav>
-            <a href="http://www.peakbucket.com" target="_blank" title="www.peakbucket.com"><i class="fa fa-globe"></i> Site</a>
+            <a href="http://www.peakbucket.com" target="_parent" title="www.peakbucket.com"><i class="fa fa-globe"></i> Site</a>
           </nav>
 
         </header>
