Add previous posts and limit shown posts in main page

--- a/style.scss
+++ b/style.scss
@@ -286,6 +286,12 @@ nav {
   }
 }
 
+.title{
+  font-family: 'Raleway';
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
+
 .wrapper-footer {
   margin-top: 50px;
   border-top: 1px solid #ddd;
