--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,8 +13,8 @@ layout: default
     Posted {{ page.date | date: "%B %e, %Y" }}
   </div>
 
-  <div class="all-posts">
-    <a href="{{ site.baseurl }}/"><i class="fa fa-reply"></i> All Posts</a>
+  <div class="to-blog">
+    <a href="{{ site.baseurl }}/"><i class="fa fa-reply"></i> Blog</a>
   </div>
 
   {% include disqus.html %}
