--- a/style.scss
+++ b/style.scss
@@ -120,7 +120,7 @@ img {
   color: $gray;
 }
 
-.all-posts {
+.to-blog {
   margin-top: 15px;
   text-transform: uppercase;
   font-size: 15px;
@@ -286,10 +286,10 @@ nav {
   }
 }
 
-.title{
-  font-family: 'Raleway';
+.all-posts-link {
+  font-weight: 400;
   text-transform: uppercase;
-  letter-spacing: 3px;
+  text-align: center;
 }
 
 .wrapper-footer {
@@ -313,6 +313,14 @@ footer a {
     color: #333;
     text-decoration: none;
   }
+}
+
+.all-posts-title {
+  text-align: center;
+}
+
+.posts-year {
+  text-decoration: underline;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
