integrate jekyll logo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,9 @@
       <div class="container">
         <footer class="footer">
           {% include icons.html %}
+          <div class="built-with-jekyll">
+            <img src="{{ site.baseurl }}/images/jekyll.svg" alt="Jekyll" title="Built with Jekyll" style="width: 55px;"/>
+          </div>
         </footer>
       </div>
     </div>
