--- a/style.scss
+++ b/style.scss
@@ -315,6 +315,12 @@ footer a {
   }
 }
 
+.built-with-jekyll {
+  margin-top: 10px;
+  margin-bottom: -10px;
+}
+
+
 .posts-year {
   text-decoration: underline;
 }
