rough draft of first 100 days post

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
   </div>
 
   <div class="to-blog">
-    <a href="{{ site.baseurl }}/"><i class="fa fa-reply"></i> Blog</a>
+    <a href="{{ site.baseurl }}/"><i class="fa fa-reply"></i> Back to Blog</a>
   </div>
 
   {% include disqus.html %}
