--- a/styles/first_100_days.css
+++ b/styles/first_100_days.css
@@ -1,3 +1,230 @@
-p {
-  color: red;
+/* global */
+h2 {
+  margin-bottom: -10px;
+  color: #777;
+}
+
+
+/* charts */
+.chart {
+  width: 100%;
+}
+
+/* bar chart */
+.bar {
+  opacity: 0.75;
+}
+.bar:hover {
+  opacity: 0.95;
+}
+.axis text {
+  font: 7px sans-serif;
+}
+.axis line,
+.axis path {
+  fill: none;
+  stroke: #777;
+}
+
+/* pie chart */
+.slice {
+  opacity: 0.75;
+}
+.slice:hover {
+  opacity: 0.95;
+}
+
+/* tooltips */
+.tooltip {
+  position: absolute;
+  background-color: rgba(255,255,255,1.0);
+  padding: 1px;
+  border: 1px solid rgba(0,0,0,.2);
+  z-index: 10000;
+  font-family: Arial;
+  font-size: 13px;
+  text-align: left;
+  pointer-events: none;
+  white-space: nowrap;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.tooltip h4 {
+  margin: 0;
+  padding: 4px 14px;
+  line-height: 18px;
+  font-weight: normal;
+  background-color: rgba(247,247,247,0.75);
+  text-align: center;
+  border-bottom: 1px solid #ebebeb;
+  -webkit-border-radius: 5px 5px 0 0;
+  -moz-border-radius: 5px 5px 0 0;
+  border-radius: 1px 5px 0 0;
+}
+.tooltip p {
+  margin: 0;
+  padding: 5px 14px;
+  text-align: center;
+}
+
+/*
+  http://jsfiddle.net/vrcQp/6/
+  http://cssdeck.com/labs/pure-css3-github-style-buttons
+*/
+/* button group container */
+.button-group-holder {
+  text-align: center;
+  margin: auto;
+}
+.button-group-wrap {
+  margin: auto;
+}
+
+/* button group */
+.button-group {
+    list-style: none;
+    padding: 0;
+    margin: 10px; /* IE hacks */
+    zoom: 1;
+    display: inline-block;
+    overflow: hidden;
+}
+.button + .button,
+.button + .button-group,
+.button-group + .button,
+.button-group + .button-group { margin-left: 15px }
+.button-group li {
+    float: left;
+    padding: 0;
+    margin: 0;
+}
+.button-group .button {
+    float: left;
+    margin-left: -1px;
+}
+.button-group > .button:not(:first-child):not(:last-child),
+.button-group li:not(:first-child):not(:last-child) .button {
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+}
+.button-group > .button:first-child,
+.button-group li:first-child .button {
+    margin-left: 0;
+    -webkit-border-top-right-radius: 0;
+    -webkit-border-bottom-right-radius: 0;
+    -moz-border-radius-topright: 0;
+    -moz-border-radius-bottomright: 0;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+.button-group > .button:last-child,
+.button-group li:last-child > .button {
+    -webkit-border-top-left-radius: 0;
+    -webkit-border-bottom-left-radius: 0;
+    -moz-border-radius-topleft: 0;
+    -moz-border-radius-bottomleft: 0;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+/* button */
+.button {
+  position: relative;
+  overflow: visible;
+  display: inline-block;
+  padding: 0.5em 1em;
+  border: 1px solid #d4d4d4;
+  margin: 0;
+  text-decoration: none;
+  text-shadow: 1px 1px 0 #fff;
+  font: 11px/normal sans-serif;
+  color: #333;
+  white-space: nowrap;
+  cursor: pointer;
+  outline: none;
+  background-color: #ececec;
+  -moz-background-clip: padding;
+  background-clip: padding;
+  -webkit-border-radius: 0.2em;
+  -moz-border-radius: 0.2em;
+  border-radius: 0.2em; /* IE hacks */
+  zoom: 1;
+  *display: inline;
+}
+.button:hover,
+.button:focus {
+  border-color: #3072b3;
+  border-bottom-color: #2a65a0;
+  text-decoration: none;
+  text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
+  color: #fff;
+  background-color: #777;
+}
+.button:active,
+.button.active {
+  text-shadow: -1px -1px 0 rgba(0,0,0,0.3);
+  color: #fff;
+  border-color: #2a65a0;
+  border-bottom-color: #3884CF;
+  background-color: #333;
+}
+.button::-moz-focus-inner { /* overrides extra padding on button elements in Firefox  */
+  padding: 0;
+  border: 0;
+}
+
+/* big */
+.button.big {
+  font-size: 14px
+}
+
+/* pill */
+.button.pill {
+  -webkit-border-radius: 50em;
+  -moz-border-radius: 50em;
+  border-radius: 50em;
+}
+
+/* activity stats */
+#activity-stats-container {
+  margin-top: -10px;
+}
+#activity-stats-container:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.activity-stat {
+    text-align: center;
+  }
+@media only screen and (min-width: 500px) {
+  .activity-stat {
+    float: left;
+    width: 50%;
+  }
+}
+#activity-stats-container h1 {
+  margin-top: 0px;
+  margin-bottom: 5px;
+  min-height: 51px;
+}
+#activity-stats-container h3 {
+  margin-bottom: 5px;
+  color: #333;
+}
+#distance-units,
+#elevation-units {
+  margin-top: 0px;
+  margin-bottom: 5px;
+  color: #777;
+}
+.stats-reference {
+  color: #a8a8a8;
+  font-size: 15px;
+  font-style: italic;
 }
