--- a/styles/first_100_days.css
+++ b/styles/first_100_days.css
@@ -200,17 +200,11 @@ h2 {
   clear: both;
 }
 .activity-stat {
-    text-align: center;
-  }
-@media only screen and (min-width: 500px) {
-  .activity-stat {
-    float: left;
-    width: 50%;
-  }
+  text-align: center;
 }
 #activity-stats-container h1 {
-  margin-top: 0px;
-  margin-bottom: 2px;
+  margin-top: 7px;
+  margin-bottom: -2px;
   min-height: 51px;
 }
 #activity-stats-container h3 {
@@ -227,4 +221,14 @@ h2 {
   color: #a8a8a8;
   font-size: 15px;
   font-style: italic;
+}
+@media only screen and (min-width: 500px) {
+  .activity-stat {
+    float: left;
+    width: 50%;
+  }
+  #activity-stats-container h1 {
+    margin-top: 0px;
+    margin-bottom: 2px;
+  }
 }
