update hrefs so pathnames work on blog.peakbucket.com

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
           <img class="site-avatar" src="{{ site.avatar }}" />
 
           <div class="site-info">
-            <a href="{{ site.baseurl }}/"><h1 class="site-name"><span><i class="fa fa-rss" title="Blog"></i> |</span> {{ site.name }}</h1></a>
+            <a href="/" target="_parent"><h1 class="site-name"><span><i class="fa fa-rss" title="Blog"></i> |</span> {{ site.name }}</h1></a>
             <p class="site-description">{{ site.description }}</p>
           </div>
 
