--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.name }} Blog</title>
+    <title>Blog | {{ site.name }}</title>
 
     {% include meta.html %}
 
@@ -52,7 +52,6 @@
       </div>
     </div>
 
-    <!-- scripts -->
     {% for js in page.customJS %}
       <script type="text/javascript" src="{{ js }}"></script>
     {% endfor %}
